Add content for Weeks 7-9, covering Reading Skills, Writing Skills, and ICT in Language Learning

--- a/GST111/cheatgst.html
+++ b/GST111/cheatgst.html
@@ -145,14 +145,12 @@
             <li>
               <span class="term">Vowel Sounds</span>
               Speech sounds produced with an open vocal tract. Classified by
-              tongue height (high/low), tongue backness (front/back), and lip
-              rounding.
+              tongue height, backness, and lip rounding.
             </li>
             <li>
               <span class="term">Consonant Sounds</span>
-              Speech sounds produced with some closure or obstruction in the
-              vocal tract. Classified by place of articulation (e.g., bilabial,
-              alveolar) and manner of articulation (e.g., plosive, fricative).
+              Speech sounds produced with closure or obstruction in the vocal
+              tract. Classified by place and manner of articulation.
             </li>
           </ul>
         </section>
@@ -166,18 +164,13 @@
               subject and a verb.
             </li>
             <li>
-              <span class="term">Structural Types of Sentences</span>
-              <strong>Simple:</strong> One independent clause.<br />
-              <strong>Compound:</strong> Two or more independent clauses.<br />
-              <strong>Complex:</strong> One independent clause and at least one
-              dependent clause.
+              <span class="term">Structural Types</span>
+              Simple, Compound, Complex, and Compound-Complex.
             </li>
             <li>
-              <span class="term">Functional Types of Sentences</span>
-              <strong>Declarative:</strong> Makes a statement.<br />
-              <strong>Interrogative:</strong> Asks a question.<br />
-              <strong>Imperative:</strong> Gives a command.<br />
-              <strong>Exclamatory:</strong> Expresses strong emotion.
+              <span class="term">Functional Types</span>
+              Declarative (statement), Interrogative (question), Imperative
+              (command), and Exclamatory (emotion).
             </li>
           </ul>
         </section>
@@ -187,32 +180,13 @@
           <ul class="definition-list">
             <li>
               <span class="term">Grammar</span>
-              The set of structural rules governing the composition of clauses,
-              phrases, and words in a language.
+              The structural rules governing clauses, phrases, and words.
             </li>
             <li>
-              <span class="term">Word Classes (Parts of Speech)</span>
-              Categories of words based on their function in a sentence.
-              <div class="word-class-container">
-                <div class="word-class-column">
-                  <strong>Open Classes</strong> (new words can be added)
-                  <ul>
-                    <li>Nouns</li>
-                    <li>Verbs</li>
-                    <li>Adjectives</li>
-                    <li>Adverbs</li>
-                  </ul>
-                </div>
-                <div class="word-class-column">
-                  <strong>Closed Classes</strong> (membership is fixed)
-                  <ul>
-                    <li>Pronouns</li>
-                    <li>Prepositions</li>
-                    <li>Conjunctions</li>
-                    <li>Determiners</li>
-                  </ul>
-                </div>
-              </div>
+              <span class="term">Word Classes</span>
+              <strong>Open:</strong> Nouns, Verbs, Adjectives, Adverbs.<br />
+              <strong>Closed:</strong> Pronouns, Prepositions, Conjunctions,
+              Determiners.
             </li>
           </ul>
         </section>
@@ -221,20 +195,12 @@
           <h2>5. Logical and Critical Thinking</h2>
           <ul class="definition-list">
             <li>
-              <span class="term">Logic</span>
-              The study of correct reasoning and the principles of valid
-              inference.
-            </li>
-            <li>
               <span class="term">Inference</span>
-              The process of deriving logical conclusions from premises known or
-              assumed to be true. It's how we determine truth without direct
-              observation.
+              Deriving logical conclusions from known premises.
             </li>
             <li>
               <span class="term">Proposition</span>
-              A statement that can be either true or false. Logic analyzes the
-              relationships between propositions.
+              A statement that is either true or false.
             </li>
           </ul>
         </section>
@@ -243,19 +209,75 @@
           <h2>6. Ethical Considerations & Copyright</h2>
           <ul class="definition-list">
             <li>
-              <span class="term">Ethics in Writing</span>
-              The moral principles that guide the responsible creation and use
-              of written information.
-            </li>
-            <li>
               <span class="term">Plagiarism</span>
-              Presenting someone else's work or ideas as your own without giving
-              proper credit. It is a serious academic and ethical offense.
+              Presenting others' work as your own without credit.
             </li>
             <li>
               <span class="term">Copyright</span>
-              A legal right that grants the creator of an original work
-              exclusive rights for its use and distribution.
+              Legal exclusive rights granted to creators for their original
+              work.
+            </li>
+          </ul>
+        </section>
+
+        <section class="module">
+          <h2>7. Reading Skills and Comprehension</h2>
+          <ul class="definition-list">
+            <li>
+              <span class="term">SQ3R Method</span>
+              Survey, Question, Read, Recite, Review—a systematic approach to
+              reading.
+            </li>
+            <li>
+              <span class="term">Reading Techniques</span>
+              <strong>Skimming:</strong> Quick overview for main ideas.<br />
+              <strong>Scanning:</strong> Locating specific information.<br />
+              <strong>Intensive:</strong> Detailed, focused reading.<br />
+              <strong>Extensive:</strong> Reading for pleasure or general info.
+            </li>
+            <li>
+              <span class="term">Challenges</span>
+              Sub-vocalization (silent speech), eye regression (re-reading), and
+              word recognition delays.
+            </li>
+          </ul>
+        </section>
+
+        <section class="module">
+          <h2>8. Writing Skills</h2>
+          <ul class="definition-list">
+            <li>
+              <span class="term">Pre-Writing</span>
+              Brainstorming ideas and creating structured outlines.
+            </li>
+            <li>
+              <span class="term">The Draft</span>
+              Transforming thoughts into text with logical flow and coherence.
+            </li>
+            <li>
+              <span class="term">Post-Writing</span>
+              Editing for content, reviewing for clarity, and proofreading for
+              errors.
+            </li>
+          </ul>
+        </section>
+
+        <section class="module">
+          <h2>9. ICT in Language Learning</h2>
+          <ul class="definition-list">
+            <li>
+              <span class="term">Role of ICT</span>
+              Enhances accessibility, enables collaboration, and provides
+              multimedia resources.
+            </li>
+            <li>
+              <span class="term">Tools</span>
+              Online platforms, language software, and AI-driven learning aids.
+            </li>
+            <li>
+              <span class="term">Integration Challenges</span>
+              Technical barriers, digital literacy requirements, and resource
+              availability.
             </li>
           </ul>
         </section>
