--- a/GST111/gst111.html
+++ b/GST111/gst111.html
@@ -143,6 +143,9 @@
           <li>
             <a href="#week6">Week 6: Ethical Considerations & Copyright</a>
           </li>
+          <li><a href="#week7">Week 7: Reading Skills and Comprehension</a></li>
+          <li><a href="#week8">Week 8: Writing Skills</a></li>
+          <li><a href="#week9">Week 9: ICT in Language Learning</a></li>
         </ul>
       </section>
 
@@ -270,8 +273,71 @@
             </li>
             <li>
               <strong>Infringements:</strong> The consequences of violating
-              copyright and ethical standards in academic and professional
-              writing.
+              copyright and ethical standards.
+            </li>
+          </ul>
+        </section>
+
+        <section id="week7" class="module">
+          <h2>Week 7: Reading Skills and Comprehension</h2>
+          <ul>
+            <li>
+              <strong>SQ3R Method:</strong> Effective study through Survey,
+              Question, Read, Recite, and Review.
+            </li>
+            <li>
+              <strong>Types of Reading:</strong> Differentiating between
+              Intensive, Extensive, Skimming, and Scanning techniques.
+            </li>
+            <li>
+              <strong>Reading Challenges & Strategies:</strong> Overcoming
+              obstacles like Sub-vocalization, Eye Regression, and Word
+              Recognition issues.
+            </li>
+          </ul>
+        </section>
+
+        <section id="week8" class="module">
+          <h2>Week 8: Writing Skills</h2>
+          <ul>
+            <li>
+              <strong>Writing Process:</strong>
+              <ul>
+                <li>
+                  <strong>Pre-Writing:</strong> Strategies for brainstorming and
+                  outlining ideas.
+                </li>
+                <li>
+                  <strong>Writing:</strong> Focusing on drafting and maintaining
+                  logical flow.
+                </li>
+                <li>
+                  <strong>Post-Writing:</strong> Essential steps for editing,
+                  reviewing, and proofreading.
+                </li>
+              </ul>
+            </li>
+            <li>
+              <strong>Basic Form of Written Work:</strong> Understanding the
+              structural requirements of formal writing.
+            </li>
+          </ul>
+        </section>
+
+        <section id="week9" class="module">
+          <h2>Week 9: ICT in Language Learning</h2>
+          <ul>
+            <li>
+              <strong>Role of ICT:</strong> How technology enhances learning,
+              collaboration, and accessibility in language study.
+            </li>
+            <li>
+              <strong>Types of ICT Tools:</strong> Application of Communication
+              tools, Multimedia, Software, Online Platforms, and AI.
+            </li>
+            <li>
+              <strong>Challenges of ICT Integration:</strong> Identifying and
+              addressing obstacles in digital language learning environments.
             </li>
           </ul>
         </section>
