Revise header and creator credit in index.html for clarity; update study strategies section and remove outdated content.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <main class="container">
       <header>
-        <h1>Computer Science</h1>
+        <h1>Computer Science (first-semester)</h1>
         <p class="subtitle">
           A curated collection of study materials and outlines for first-year
           students at KWASU.
@@ -25,10 +25,12 @@
         </p>
 
         <p class="creator-credit">
-          Original pdf compiled by
+          main pdf compiled by
           <a
             href="https://api.whatsapp.com/send?phone=2349130699671&text=hello%20mr%20oromi%2C%20from%20%22kwasucsnotes%22%2C%20thanks%20for%20the%20compilation%2E"
-            >Oromi</a
+            target="_blank"
+            class="owner-link"
+            >Oromi (msg me)</a
           >
         </p>
       </header>
@@ -99,8 +101,9 @@
         </div>
       </section>
       <section id="study-strategies">
-        <h2>Doing well in your courses</h2>
         <div class="resource-card single-card">
+          <h2>Doing well in your courses</h2>
+
           <p>
             a guide by Andrej Karpathy on effective study techniques, time
             management, and maximizing learning outcomes.
@@ -112,41 +115,11 @@
             >Read More</a
           >
         </div>
-        <h2>A suggested study schedule</h2>
-        <div class="resource-card single-card">
-          <p>
-            This schedule is built on principles of active recall and spaced
-            repetition to help you effectively master the material from all your
-            compiled resources and achieve a high CGPA.
-          </p>
-          <a href="/timetable.html" target="_blank" class="resource-link"
-            >Read More</a
-          >
-        </div>
-      </section>
-      <section id="feedback-section">
-        <h2>Contribute & Give Feedback</h2>
-        <p>
-          This resource hub is a community effort. If you find a broken link, a
-          typo, or have a suggestion for a new resource that could help others,
-          please let us know. Your feedback helps improve this site for
-          everyone.
-        </p>
-        <a
-          href="https://forms.gle/hp8ADAL8Ng8wAV6A9"
-          target="_blank"
-          class="feedback-button"
-          >Submit via Google Form</a
-        >
       </section>
     </main>
 
     <footer>
-      <p class="creator-credit">
-        More resources
-        <a href="/resources.html" class="owner-link">here!</a>
-      </p>
-      <p><small>cs-resources v2.1 — 2025</small></p>
+      <p><small>cs-resources v1— 2025-hassan2bit</small></p>
     </footer>
   </body>
 </html>
